--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body>
 
 
-<!-- TOP HEADER Start
+<!-- TOP HEADER Start fdfgdfgdfg
     ================================================== -->
-	
+
 	<section id="top">
 		<div class="container">
 			<div class="row">
@@ -83,7 +83,7 @@
 			</div> <!-- End Of /.row -->
 		</div>	<!-- End Of /.Container -->
 
-	
+
 	<!-- MODAL Start
     	================================================== -->
 
@@ -140,14 +140,14 @@
 			      	</div>
 		    	</div>
 		  	</div>
-		</div>	
+		</div>
 	</section>  <!-- End of /Section -->
-	
+
 
 
 	<!-- LOGO Start
     ================================================== -->
-	
+
 	<header>
 		<div class="container">
 			<div class="row">
@@ -160,7 +160,7 @@
 		</div>	<!-- End of /.container -->
 	</header> <!-- End of /Header -->
 
-	
+
 
 
 	<!-- MENU Start
@@ -196,7 +196,7 @@
 						</ul>
 					</li> <!-- End of /.dropdown -->
 
-					
+
 		        </ul> <!-- End of /.nav-main -->
 		    </div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
@@ -222,7 +222,7 @@
 	</section> <!-- End of Section -->
 
 
-	
+
 	<!-- FEATURES Start
     ================================================== -->
 
@@ -284,7 +284,7 @@
 					<div class="block">
 						<div class="block-heading">
 							<h2>OUR FOOD CATEGORIES</h2>
-						</div>	
+						</div>
 						<div class="row">
 						  	<div class="col-sm-6 col-md-4">
 							    <div class="thumbnail">
@@ -335,7 +335,7 @@
 							    </div>	<!-- End of /.thumbnail -->
 						  	</div>	<!-- End of /.col-sm-6 col-md-4 -->
 						</div>	<!-- End of /.row -->
-					</div>	<!-- End of /.block --> 
+					</div>	<!-- End of /.block -->
 				</div>	<!-- End of /.col-md-12 -->
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.container -->
@@ -343,7 +343,7 @@
 
 
 
-	
+
 		<!-- PRODUCTS Start
     ================================================== -->
 
@@ -468,8 +468,8 @@
 	</section>	<!-- End of Section -->
 
 
-	
-	
+
+
 		<!-- CALL TO ACTION Start
     ================================================== -->
 
@@ -496,8 +496,8 @@
 			</div> <!-- End Of /.Row -->
 		</div> <!-- End Of /.Container -->
 	</section>	<!-- End of Section -->
-	
-	
+
+
 
 	<!-- FOOTER Start
     ================================================== -->
@@ -550,7 +550,7 @@
 						<p> <i class="fa  fa-phone"></i> <span>Phone:</span> (+386) 40 123 456 </p>
 
 						<p> <i class="fa  fa-mobile"></i> <span>Mobile:</span> (+386) 40 654 123 651</p>
- 
+
 						<p class="mail"><i class="fa  fa-envelope"></i>Eamil: <span>info@sitename.com</span></p>
 					</div>	<!-- End Of /.block -->
 				</div> <!-- End Of Col-md-3 -->
@@ -581,7 +581,7 @@
 				</div> <!-- End Of Col-md-3 -->
 			</div> <!-- End Of /.row -->
 		</div> <!-- End Of /.Container -->
-		
+
 
 
 	<!-- FOOTER-BOTTOM Start
@@ -594,37 +594,37 @@
 						<ul class="cash-out pull-left">
 							<li>
 								<a href="#">
-									<img src="images/American-Express.png" alt="">	
+									<img src="images/American-Express.png" alt="">
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<img src="images/PayPal.png" alt="">	
+									<img src="images/PayPal.png" alt="">
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<img src="images/Maestro.png" alt="">	
+									<img src="images/Maestro.png" alt="">
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<img src="images/Visa.png" alt="">	
+									<img src="images/Visa.png" alt="">
 								</a>
 							</li>
 							<li>
 								<a href="#">
-									<img src="images/Visa-Electron.png" alt="">	
+									<img src="images/Visa-Electron.png" alt="">
 								</a>
 							</li>
 						</ul>
 						<p class="copyright-text pull-right">Food Code @2013 Designed by <a href="http://www.themexpert.com">Themexpert</a> All Rights Reserved</p>
-					</div>	<!-- End Of /.col-md-12 -->	
-				</div>	<!-- End Of /.row -->	
-			</div>	<!-- End Of /.container -->	
+					</div>	<!-- End Of /.col-md-12 -->
+				</div>	<!-- End Of /.row -->
+			</div>	<!-- End Of /.container -->
 		</div>	<!-- End Of /.footer-bottom -->
 	</footer> <!-- End Of Footer -->
-	
+
 	<a id="back-top" href="#"></a>
 </body>
 </html>
