--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Food Code Proudly Presents By Themexpert</title>
+	<title>Zepernick09</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<!-- Fonts -->
@@ -23,7 +23,7 @@
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/jquery.nivo.slider.js" type="text/javascript"></script>
 	<script src="js/owl.carousel.min.js" type="text/javascript"></script>
-	<script src="js/jquery.nicescroll.js"></script>
+<!--	<script src="js/jquery.nicescroll.js"></script> -->
 	<script src="js/jquery.scrollUp.min.js"></script>
 	<script src="js/main.js" type="text/javascript"></script>
 
@@ -32,16 +32,20 @@
 <body>
 
 
-<!-- TOP HEADER Start fdfgdfgdfg
+<!-- TOP HEADER Start 31072019
     ================================================== -->
 
 	<section id="top">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-7">
-					<p class="contact-action"><i class="fa fa-phone-square"></i>IN CASE OF ANY QUESTIONS, CALL THIS NUMBER: <strong>+565 975 658</strong></p>
+					<p class="contact-action"><i class=""></i>Kontakt
+					<i class=""></i>Impressum
+					<i class=""></i>Datenschutz
+					<i class=""></i>Links</p>
 				</div>
-				<div class="col-md-3 clearfix">
+
+			<!--		<div class="col-md-3 clearfix">
 					<ul class="login-cart">
 						<li>
 							<a data-toggle="modal" data-target="#myModal" href="#">
@@ -50,7 +54,7 @@
 							</a>
 						</li>
 						<li>
-							<div class="cart dropdown">
+						<div class="cart dropdown">
 						  		<a data-toggle="dropdown" href="#"><i class="fa fa-shopping-cart"></i>Cart(1)</a>
 					  			<div class="dropdown-menu dropup">
 					  				<span class="caret"></span>
@@ -180,22 +184,32 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav nav-main">
 		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a href="products.html">SHOP</a></li>
-					<li><a href="blog.html">BLOG</a></li>
-					<li><a href="blog-single.html">ARTICLE</a></li>
+					<li><a href="products.html">Spielbetrieb</a></li>
 					<li class="dropdown">
 						<a href="#">
-							PAGES
+							Vorstand
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
-						   <li><a  href="#">Action</a></li>
-						    <li><a  href="#">Another action</a></li>
-						    <li><a  href="#">Something else here</a></li>
-						    <li><a  href="#">Separated link</a></li>
+							 <li><a  href="#">Vorstand</a></li>
+								<li><a  href="#">Trainer</a></li>
+								<li><a  href="#">Satzung</a></li>
+								<li><a  href="#">Aufnahmeantrag</a></li>
 						</ul>
 					</li> <!-- End of /.dropdown -->
-
+					<li class="dropdown">
+						<a href="#">
+							Mannschaften
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+						   <li><a  href="#">Männer</a></li>
+						    <li><a  href="#">Männliche B-Jugend</a></li>
+						    <li><a  href="#">Männliche D-Jugend</a></li>
+						    <li><a  href="#">Männliche E-Jugend</a></li>
+						</ul>
+					</li> <!-- End of /.dropdown -->
+						<li><a href="blog.html">Archiv</a></li>
 
 		        </ul> <!-- End of /.nav-main -->
 		    </div>	<!-- /.navbar-collapse -->
@@ -277,7 +291,7 @@
 	<!-- CATAGORIE Start
     ================================================== -->
 
-	<section id="catagorie">
+<!--	<section id="catagorie">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -300,9 +314,9 @@
 							        		</a>
 							        	</p>
 							      	</div>	<!-- End of /.caption -->
-							    </div>	<!-- End of /.thumbnail -->
-						  	</div>	<!-- End of /.col-sm-6 col-md-4 -->
-						  	<div class="col-sm-6 col-md-4">
+						<!--	    </div>	<!-- End of /.thumbnail -->
+						  	<!--		</div>	<!-- End of /.col-sm-6 col-md-4 -->
+							<!--	  	<div class="col-sm-6 col-md-4">
 							    <div class="thumbnail">
 							    	<a class="catagotie-head" href="blog-single.html">
 										<img src="images/category-image-2.jpg" alt="...">
@@ -316,9 +330,9 @@
 							        		</a>
 							        	</p>
 							      	</div>	<!-- End of /.caption -->
-							    </div>	<!-- End of /.thumbnail -->
-						  	</div>	<!-- End of /.col-sm-6 col-md-4 -->
-						  	<div class="col-sm-6 col-md-4">
+					<!--		<!--				    </div>	<!-- End of /.thumbnail -->
+				<!--				  	</div>	<!-- End of /.col-sm-6 col-md-4 -->
+					<!--			  	<div class="col-sm-6 col-md-4">
 							    <div class="thumbnail">
 							    	<a class="catagotie-head" href="blog-single.html">
 										<img src="images/category-image-3.jpg" alt="...">
@@ -347,7 +361,7 @@
 		<!-- PRODUCTS Start
     ================================================== -->
 
-	<section id="products">
+	<!--		<section id="products">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -370,7 +384,7 @@
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
 				</div>	<!-- End of /.col-md-3 -->
-				<div class="col-md-3">
+			<!--			<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
 							<img src="images/product-image-2.jpg" alt="">
@@ -382,8 +396,8 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-				</div> <!-- End Of Col-md-3 -->
-				<div class="col-md-3">
+					</div> <!-- End Of Col-md-3 -->
+			<!--			<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
 							<img src="images/product-image-3.jpg" alt="">
@@ -396,7 +410,7 @@
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
 				</div> <!-- End Of /.Col-md-3 -->
-				<div class="col-md-3">
+		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
 							<img src="images/product-image-4.jpg" alt="">
@@ -409,7 +423,7 @@
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
 				</div> <!-- End Of /.Col-md-3 -->
-				<div class="col-md-3">
+	<!--					<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
 							<img src="images/product-image-5.jpg" alt="">
@@ -422,7 +436,7 @@
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
 				</div> <!-- End Of /.Col-md-3 -->
-				<div class="col-md-3">
+		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
 							<img src="images/product-image-6.jpg" alt="">
@@ -435,7 +449,7 @@
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
 				</div> <!-- End Of /.Col-md-3 -->
-				<div class="col-md-3">
+		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
 							<img src="images/product-image-7.jpg" alt="">
@@ -448,7 +462,7 @@
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
 				</div> <!-- End Of /.Col-md-3 -->
-				<div class="col-md-3">
+		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
 							<img src="images/product-image-8.jpg" alt="">
@@ -479,18 +493,15 @@
 				<div class="col-md-12">
 					<div class="block">
 						<div class="block-heading">
-							<h2>Our Partners</h2>
+							<h2>Sponsoren</h2>
 						</div>
 					</div>	<!-- End of /.block -->
 					<div id="owl-example" class="owl-carousel">
-						<div> <img src="images/company-1.png" alt=""></div>
-						<div> <img src="images/company-2.png" alt=""></div>
-						<div> <img src="images/company-3.png" alt=""></div>
-						<div> <img src="images/company-4.png" alt=""></div>
-						<div> <img src="images/company-5.png" alt=""></div>
-						<div> <img src="images/company-6.png" alt=""></div>
-						<div> <img src="images/company-8.png" alt=""></div>
-						<div> <img src="images/company-9.png" alt=""></div>
+						<div> <img src="images/RoeseWerbung.jpg" alt=""></div>
+						<div> <img src="images/" alt=""></div>
+						<div> <img src="images/schmieglitz.jpg" alt=""></div>
+						<div> <img src="images/" alt=""></div>
+						<div> <img src="images/rauprecht.png" alt=""></div>
 					</div>	<!-- End of /.Owl-Slider -->
 				</div>	<!-- End of /.col-md-12 -->
 			</div> <!-- End Of /.Row -->
@@ -502,7 +513,7 @@
 	<!-- FOOTER Start
     ================================================== -->
 
-	<footer>
+<!--	<footer>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
@@ -543,7 +554,7 @@
 						</ul>	<!-- End Of /.social-icon -->
 					</div>	<!-- End Of /.block -->
 				</div> <!-- End Of /.Col-md-4 -->
-				<div class="col-md-4">
+	<!--			<div class="col-md-4">
 					<div class="block">
 						<h4>GET IN TOUCH</h4>
 						<p ><i class="fa  fa-map-marker"></i> <span>Food Code d.o.o.,</span>1000 Ljubljana Celovska cesta 135, Slovenia</p>
@@ -553,8 +564,8 @@
 
 						<p class="mail"><i class="fa  fa-envelope"></i>Eamil: <span>info@sitename.com</span></p>
 					</div>	<!-- End Of /.block -->
-				</div> <!-- End Of Col-md-3 -->
-				<div class="col-md-4">
+	<!--			</div> <!-- End Of Col-md-3 -->
+		<!--		<div class="col-md-4">
 					<div class="block">
 						<h4>UPCOMING ITEMS</h4>
 						<div class="media">
@@ -587,7 +598,7 @@
 	<!-- FOOTER-BOTTOM Start
     ================================================== -->
 
-		<div class="footer-bottom">
+<!--		<div class="footer-bottom">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -618,7 +629,6 @@
 								</a>
 							</li>
 						</ul>
-						<p class="copyright-text pull-right">Food Code @2013 Designed by <a href="http://www.themexpert.com">Themexpert</a> All Rights Reserved</p>
 					</div>	<!-- End Of /.col-md-12 -->
 				</div>	<!-- End Of /.row -->
 			</div>	<!-- End Of /.container -->
