--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
 
 	<header>
 		<div class="container">
-			<div class="row">
+		<div class="row"> -->
 				<div class="col-md-12">
 					<a href="#">
 						<img src="images/logo.png" alt="logo">
 					</a>
 				</div>	<!-- End of /.col-md-12 -->
-			</div>	<!-- End of /.row -->
+			</div>	 End of /.row -->
 		</div>	<!-- End of /.container -->
 	</header> <!-- End of /Header -->
 
@@ -205,6 +205,7 @@
 						<ul class="dropdown-menu">
 						   <li><a  href="#">Männer</a></li>
 						    <li><a  href="#">Männliche B-Jugend</a></li>
+								<li><a  href="#">Männliche C-Jugend</a></li>
 						    <li><a  href="#">Männliche D-Jugend</a></li>
 						    <li><a  href="#">Männliche E-Jugend</a></li>
 						</ul>
@@ -250,7 +251,8 @@
 						    	<i class="fa fa-ambulance"></i>
 						  	</div>
 						  	<div class="media-body">
-						    	<h4 class="media-heading">Free Shipping</h4>
+									<img src="images/slider.jpg" alt="" />
+								<!--	<h4 class="media-heading">Free Shipping</h4> -->
 						    	<p>Lorem ipsum dolor sit amet, consectetur.</p>
 						  </div>
 						</div>
