--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav nav-main">
 		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a href="products.html">Spielbetrieb</a></li>
+					<li><a href="#">Spielbetrieb</a></li>
 					<li class="dropdown">
 						<a href="#">
 							Vorstand
@@ -204,18 +204,113 @@
 						</a>
 						<ul class="dropdown-menu">
 						   <li><a  href="#">Männer</a></li>
-						    <li><a  href="#">Männliche B-Jugend</a></li>
+							 	<li><a  href="#">Männliche B-Jugend</a></li>
+						    <li><a  href="#">Männliche C-Jugend</a></li>
 						    <li><a  href="#">Männliche D-Jugend</a></li>
 						    <li><a  href="#">Männliche E-Jugend</a></li>
 						</ul>
 					</li> <!-- End of /.dropdown -->
-						<li><a href="blog.html">Archiv</a></li>
+						<li><a href="#">Archiv</a></li>
 
 		        </ul> <!-- End of /.nav-main -->
 		    </div>	<!-- /.navbar-collapse -->
 		</div>	<!-- /.container-fluid -->
 	</nav>	<!-- End of /.nav -->
 
+	<!-- Pictures middle -->
+	<!--	<section id="middle">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-9">
+					<div class="products-heading">
+						<h2></h2>
+					</div>	<!-- End of /.Products-heading -->
+				<!--	<div class="product-grid">
+							<ul>
+									<li>
+											<div class="products">
+									<a href="#">
+										<img src="images/siegel_kinderschutz.png" alt="">
+									</a>
+									<a href="#">
+										<h4>Ausgezeichnet!</h4>
+									</a>
+								</div>	<!-- End of /.products -->
+				<!--					</li>
+									<li>
+											<div class="products">
+									<a href="#">
+										<img src="images/Sommerpause.png" alt="">
+									</a>
+									<a href="#">
+										<h4>Sommerpause</h4>
+									</a>
+								</div>	<!-- End of /.products -->
+			<!--						</li>
+									<li>
+											<div class="products">
+									<a href="#">
+										<img src="images/silhouette.png" alt="">
+									</a>
+									<a href="#">
+										<h4>Es geht wieder los!</h4>
+									</a>
+								</div>	<!-- End of /.products -->
+		<!--<!--				</li>
+
+									<!--  ... -->
+	<!--				</ul>
+					</div>	<!-- End of /.products-grid -->
+					<!-- Pagination -->
+
+		<!--			<div class="pagination-bottom">
+						<!--	<ul class="pagination">
+								<li class="disabled"><a href="#">&laquo;</a></li>
+								<li class="active"><a href="#">1 <span class="sr-only"></span></a></li>
+								<li><a href="#">2</a></li>
+								<li><a href="#">3</a></li>
+								<li><a href="#">4</a></li>
+								<li><a href="#">»</a></li>
+						</ul>	<!-- End of /.pagination -->
+						</div>
+				</div>	<!-- End of /.col-md-9 -->
+		<!--			<div class="col-md-3">
+					<div class="blog-sidebar">
+						<div class="block">
+							<h4>News</h4>
+							<div class="list-group">
+								<a href="#" class="list-group-item">
+									<i class="fa  fa-dot-circle-o"></i>
+									Aufnahmeantrag
+								</a>
+								<a href="#" class="list-group-item">
+									<i class="fa  fa-dot-circle-o"></i>
+									Satzung
+								</a>
+								<a href="#" class="list-group-item">
+									<i class="fa  fa-dot-circle-o"></i>
+									blabla
+								</a>
+								<a href="#" class="list-group-item">
+									<i class="fa  fa-dot-circle-o"></i>
+									blabla
+								</a>
+								<a href="#" class="list-group-item">
+									<i class="fa  fa-dot-circle-o"></i>
+									blabla
+								</a>
+							</div>
+						</div>
+					<!--	<div class="block">
+							<img src="images/food-ad.png" alt="">
+						</div> -->
+
+
+				</div>	<!-- End of /.col-md-3 -->
+
+				</div>	<!-- End of /.row -->
+				</div>	<!-- End of /.container -->
+				</section>	<!-- End of Section -->
 
 	<!-- SLIDER Start
     ================================================== -->
@@ -226,13 +321,14 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div id="slider" class="nivoSlider">
-				    	<img src="images/slider.jpg" alt="" />
-				    	<img src="images/slider1.jpg" alt=""/>
-				    	<img src="images/slider2.jpg" alt="" />
+				    	<img src="images/Sommerferien.jpg" alt="" />
+				    	<img src="images/auszeichnung.png" alt=""/>
+				    	<img src="images/handball.jpg" alt="" />
 					</div>	<!-- End of /.nivoslider -->
 				</div>	<!-- End of /.col-md-12 -->
 			</div>	<!-- End of /.row -->
 		</div>	<!-- End of /.container -->
+
 	</section> <!-- End of Section -->
 
 
@@ -240,7 +336,7 @@
 	<!-- FEATURES Start
     ================================================== -->
 
-	<section id="features">
+<!--	<section id="features">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
@@ -383,7 +479,7 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-				</div>	<!-- End of /.col-md-3 -->
+		<!--		</div>	<!-- End of /.col-md-3 -->
 			<!--			<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
@@ -396,7 +492,7 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-					</div> <!-- End Of Col-md-3 -->
+			<!--		</div> <!-- End Of Col-md-3 -->
 			<!--			<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
@@ -409,7 +505,7 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-				</div> <!-- End Of /.Col-md-3 -->
+	<!--			</div> <!-- End Of /.Col-md-3 -->
 		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
@@ -422,7 +518,7 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-				</div> <!-- End Of /.Col-md-3 -->
+		<!--		</div> <!-- End Of /.Col-md-3 -->
 	<!--					<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
@@ -435,7 +531,7 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-				</div> <!-- End Of /.Col-md-3 -->
+		<!--		</div> <!-- End Of /.Col-md-3 -->
 		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
@@ -448,7 +544,7 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-				</div> <!-- End Of /.Col-md-3 -->
+		<!--		</div> <!-- End Of /.Col-md-3 -->
 		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
@@ -461,7 +557,7 @@
 						<a class="view-link shutter" href="#">
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 					</div>	<!-- End of /.products -->
-				</div> <!-- End Of /.Col-md-3 -->
+		<!--		</div> <!-- End Of /.Col-md-3 -->
 		<!--				<div class="col-md-3">
 					<div class="products">
 						<a href="single-product.html">
@@ -476,10 +572,10 @@
 							<i class="fa fa-plus-circle"></i>Add To Cart</a>
 						</div>
 					</div>	<!-- End of /.products -->
-				</div> <!-- End Of /.Col-md-3 -->
-			</div>	<!-- End of /.row -->
-		</div>	<!-- End of /.container -->
-	</section>	<!-- End of Section -->
+		<!--		</div> <!-- End Of /.Col-md-3 -->
+		<!--	</div>	<!-- End of /.row -->
+<!--		</div>	<!-- End of /.container -->
+<!--	</section>	<!-- End of Section -->
 
 
 
@@ -496,14 +592,14 @@
 							<h2>Sponsoren</h2>
 						</div>
 					</div>	<!-- End of /.block -->
-					<div id="owl-example" class="owl-carousel">
+					 	<div id="owl-example" class="owl-carousel">
 						<div> <img src="images/RoeseWerbung.jpg" alt=""></div>
-						<div> <img src="images/" alt=""></div>
+						<div> <img src="" alt=""></div>
 						<div> <img src="images/schmieglitz.jpg" alt=""></div>
-						<div> <img src="images/" alt=""></div>
+						<div> <img src="" alt=""></div>
 						<div> <img src="images/rauprecht.png" alt=""></div>
 					</div>	<!-- End of /.Owl-Slider -->
-				</div>	<!-- End of /.col-md-12 -->
+			</div>	<!-- End of /.col-md-12 -->
 			</div> <!-- End Of /.Row -->
 		</div> <!-- End Of /.Container -->
 	</section>	<!-- End of Section -->
@@ -635,6 +731,6 @@
 		</div>	<!-- End Of /.footer-bottom -->
 	</footer> <!-- End Of Footer -->
 
-	<a id="back-top" href="#"></a>
+<!--	<a id="back-top" href="#"></a> -->
 </body>
 </html>
