--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
 
 	<header>
 		<div class="container">
-		<div class="row"> -->
+		<div class="row">
 				<div class="col-md-12">
 					<a href="#">
 						<img src="images/logo.png" alt="logo">
 					</a>
 				</div>	<!-- End of /.col-md-12 -->
-			</div>	 End of /.row -->
+			</div>	 <!--End of /.row -->
 		</div>	<!-- End of /.container -->
 	</header> <!-- End of /Header -->
 
