--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		<div class="row">
 				<div class="col-md-12">
 					<a href="#">
-						<img src="images/logo.png" alt="logo">
+						<img src="images/logo.jpg" alt="logo">
 					</a>
 				</div>	<!-- End of /.col-md-12 -->
 			</div>	 <!--End of /.row -->
@@ -184,7 +184,19 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav nav-main">
 		        	<li class="active"><a href="#">HOME</a></li>
-					<li><a href="#">Spielbetrieb</a></li>
+							<li class="dropdown">
+								<a href="#">
+									Mannschaften
+									<span class="caret"></span>
+								</a>
+								<ul class="dropdown-menu">
+									 <li><a  href="#">Männer</a></li>
+										<li><a  href="#">Männliche B-Jugend</a></li>
+										<li><a  href="#">Männliche C-Jugend</a></li>
+										<li><a  href="#">Männliche D-Jugend</a></li>
+										<li><a  href="#">Männliche E-Jugend</a></li>
+								</ul>
+							</li> <!-- End of /.dropdown -->
 					<li class="dropdown">
 						<a href="#">
 							Vorstand
@@ -197,19 +209,7 @@
 								<li><a  href="#">Aufnahmeantrag</a></li>
 						</ul>
 					</li> <!-- End of /.dropdown -->
-					<li class="dropdown">
-						<a href="#">
-							Mannschaften
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-						   <li><a  href="#">Männer</a></li>
-							 	<li><a  href="#">Männliche B-Jugend</a></li>
-						    <li><a  href="#">Männliche C-Jugend</a></li>
-						    <li><a  href="#">Männliche D-Jugend</a></li>
-						    <li><a  href="#">Männliche E-Jugend</a></li>
-						</ul>
-					</li> <!-- End of /.dropdown -->
+								<li><a href="links.html">Links</a></li>
 						<li><a href="#">Archiv</a></li>
 
 		        </ul> <!-- End of /.nav-main -->
