--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
 
-	<!-- Css -->
+	<!-- Css11 -->
 	<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" />
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/owl.theme.css">
